<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">janray_s_application4</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_who_is_willing3"> who is willing to create the logo for our inventory app.\u2028 </string>
<string name="msg_who_is_willing2">who is willing t</string>
<string name="lbl_next">Next  </string>
<string name="lbl_email_address">Email Address</string>
<string name="msg_hello_there">Hello there :) here are some additional info...</string>
<string name="msg_looking_for_a_s2">Looking for a skilled editor who is willing to edit our movie project.\u2028\u2028</string>
<string name="msg_looking_for_a_s3">Looking for a skilled logo maker who is willing to create the logo for our inventory app.\u2028 </string>
<string name="msg_you_may_now_sta">You may now start collaborating with your chosen partner under Deals Section.</string>
<string name="msg_waaaaaah_it_exc">Waaaaaah it exceeded my expectations!!! Thankyou, here\u2019s the qr for the task &lt;3 </string>
<string name="lbl_post_task">Post Task</string>
<string name="lbl_portfolio">Portfolio</string>
<string name="msg_skilled_poster">skilled poster maker</string>
<string name="lbl_skilled">skilled </string>
<string name="lbl_course">Course :</string>
<string name="msg_kian_stark_just2">Kian Stark just started a collaboration with you, check your deals section now.</string>
<string name="lbl_php_300">Php 300</string>
<string name="lbl_19_2518_829">19-2518-829</string>
<string name="lbl_ratings_3_2">Ratings: 3.2</string>
<string name="lbl_php_150">Php 150</string>
<string name="lbl_cancel">Cancel</string>
<string name="lbl_mates">Mates</string>
<string name="lbl_kim_tiu">Kim Tiu</string>
<string name="lbl_deals">DEALS</string>
<string name="lbl_collaborate">Collaborate </string>
<string name="lbl_ratings">Ratings</string>
<string name="lbl_ll">ll</string>
<string name="lbl_just_now">just now</string>
<string name="msg_helloooo_thank">Helloooo, thank uuu for choosing me!!\u2028I\u2019ll start working on it later.</string>
<string name="lbl_feed">FEED</string>
<string name="lbl_admin">Admin</string>
<string name="msg_are_you_sure_yo">Are you sure you want to apply for this task?</string>
<string name="msg_what_task_are_y">What task are you offering?</string>
<string name="msg_very_friendly">Very Friendly, it was nice working with you!!</string>
<string name="msg_deadline_06_1">Deadline : 06/10/23</string>
<string name="msg_deadline_06_0">Deadline : 06/07/23</string>
<string name="lbl_deposited_by">deposited by</string>
<string name="msg_view_submission">View Submissions</string>
<string name="lbl_password">Password</string>
<string name="lbl_collab">Collab</string>
<string name="lbl_collabmates">CollabMates.</string>
<string name="lbl_id_number">Id number :</string>
<string name="lbl_accept">Accept</string>
<string name="lbl_co">co</string>
<string name="lbl_offered_tasks">Offered tasks</string>
<string name="lbl_kian_stark">Kian Stark</string>
<string name="msg_set_the_deadlin">Set the deadline for the task.</string>
<string name="lbl_year_level">Year level :</string>
<string name="msg_give_us_10_minu">Give us 10 minutes to process everything. You may check your notification for updates.</string>
<string name="lbl_apply">APPLY</string>
<string name="msg_how_much_is_you">How much is your budget for this task?</string>
<string name="lbl_dona_lang">Dona Lang</string>
<string name="lbl_account_name">Account name</string>
<string name="lbl_09157773653">09157773653</string>
<string name="lbl_submissions_3">Submissions (3)</string>
<string name="msg_o_edit_our_movi">o edit our movie project.</string>
<string name="lbl_gcash_number">Gcash number</string>
<string name="lbl_log_in">Log In</string>
<string name="msg_the_qr_you_sent">The QR you sent is equivalent to </string>
<string name="msg_ur_movie_projec">ur movie project\u2028</string>
<string name="lbl_albert_bing">Albert Bing</string>
<string name="lbl_collab2">collab.</string>
<string name="lbl_yes">Yes</string>
<string name="lbl_withdraw">WITHDRAW</string>
<string name="lbl_ab">ab.</string>
<string name="lbl_shelly_sion">Shelly Sion</string>
<string name="lbl_sign_up">Sign Up</string>
<string name="lbl_looking_for_a">Looking for a </string>
<string name="lbl_name">Name</string>
<string name="lbl_withdraw2">Withdraw  </string>
<string name="msg_submission_succ">Submission Successful!</string>
<string name="lbl_profile">PROFILE</string>
<string name="lbl">.</string>
<string name="lbl_submit">Submit</string>
<string name="lbl_collaborate2">Collaborate</string>
<string name="lbl_editor">editor </string>
<string name="lbl_upload_qr_here">Upload QR here  </string>
<string name="lbl_1_hour_ago">1 hour ago</string>
<string name="lbl_1">1</string>
<string name="lbl_3">3</string>
<string name="msg_for_our_invento"> for our inventory app.\u2028 </string>
<string name="lbl_p_150">P 150</string>
<string name="msg_who_is_willing"> who is willing to create the </string>
<string name="msg_i_d_like_the_t">\u2028\u2028-I\u2019d like the theme to be a bit of brownish\u2028-3 features: User Friendly, Realtime, Contact features\u2028\u2028lemme know if you have any questions :D</string>
<string name="msg_looking_for_a_s">Looking for a skilled poster maker who is willing to create the poster for our inventory app.\u2028 </string>
<string name="lbl_julie_baker">Julie Baker</string>
<string name="msg_note_you_are_r">Note: You are required to deposit it afterwards.</string>
<string name="lbl_my_posts">My posts</string>
<string name="lbl_aero_postle">Aero Postle</string>
<string name="lbl_notification">Notification</string>
<string name="msg_kian_stark_just">Kian Stark just rated his experience with you. Go check it now!</string>
<string name="lbl_create_a_post">  CREATE A POST</string>
<string name="lbl_ratings_4">Ratings: 4</string>
<string name="msg_we_have_transfe">We have transferred P150 to your gcash account. Check it now!</string>
<string name="lbl_view_form">View Form </string>
<string name="msg_collab_with_aer"> Collab with Aero Postle?</string>
<string name="msg_skilled_logo_ma">skilled logo maker</string>
<string name="msg_ur_movie_projec2">ur movie project</string>
<string name="msg_it_will_take_1">It will take 1-2 days for your submission to be reviewed. To stay updated, simply check your notifications.</string>
<string name="lbl_bsit">BSIT</string>
<string name="lbl_yes_i_m_sure">Yes i\u2019m sure</string>
<string name="lbl_poster">poster</string>
<string name="msg_unleash_the_pow">Unleash the Power of Collaboration</string>
<string name="msg_please_enter_valid_phone_nu">Please enter valid phone number</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
<string name="msg_please_enter_valid_email">Please enter valid email</string>
<string name="msg_please_enter_valid_text">Please enter valid text</string>
</resources>
