<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="withdrawVM" type="com.janraysapplication.app.modules.withdraw.data.viewmodel.WithdrawVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearWithdraw"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_3">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_63pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:id="@+id/linearRowcollabmates"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCollabMates"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.87"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtCollabMates}"
                    style="@style/txt_2" tools:text="@string/lbl_collabmates"/>
                <FrameLayout android:id="@+id/frameStack1301304578not"
                    android:layout_height="@dimen/_39pxv"
                    android:layout_marginBottom="@dimen/_22pxv"
                    android:layout_marginStart="@dimen/_51pxh" android:layout_width="@dimen/_36pxh">
                    <ImageView android:id="@+id/image1301304578not"
                        android:layout_gravity="bottom|start"
                        android:layout_height="@dimen/_35pxh"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_29pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_1301304578not"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_1301304578not"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center"
                        android:id="@+id/txtGroupThirtySix"
                        android:layout_gravity="top|end"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_10pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="match_parent"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingEnd="@dimen/_9pxh"
                        android:paddingStart="@dimen/_8pxh"
                        android:paddingTop="@dimen/_2pxv"
                        android:singleLine="true"
                        android:text="@{withdrawVM.withdrawModel.txtGroupThirtySix}"
                        style="@style/txtSolidRoundedOutline" tools:text="@string/lbl_1"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <View android:background="@color/gray_200"
            android:id="@+id/lineLineTwo" android:layout_gravity="start"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_390pxh"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_79pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{withdrawVM.withdrawModel.txtLanguage}"
            style="@style/txtIntermedium15_2" tools:text="@string/msg_the_qr_you_sent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnP150"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_54pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_14pxv"
            android:layout_width="@dimen/_264pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_p_150" android:textAllCaps="false"
            style="@style/btnSolidRounded_3" tools:text="@string/lbl_p_150"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtDepositedby"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_71pxh"
            android:layout_marginStart="@dimen/_71pxh"
            android:layout_marginTop="@dimen/_36pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{withdrawVM.withdrawModel.txtDepositedby}"
            style="@style/txtIntermedium15_2" tools:text="@string/lbl_deposited_by"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtGroupThirtyFour"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_15pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_3pxv"
            android:paddingStart="@dimen/_17pxh"
            android:paddingTop="@dimen/_1pxv" android:singleLine="true"
            android:text="@{withdrawVM.withdrawModel.txtGroupThirtyFour}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_kian_stark"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnWithdraw" android:layout_gravity="end"
            android:layout_height="@dimen/_44pxv"
            android:layout_marginEnd="@dimen/_25pxh"
            android:layout_marginStart="@dimen/_25pxh"
            android:layout_marginTop="@dimen/_202pxv"
            android:layout_width="@dimen/_147pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_29pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_withdraw2"
            android:textAllCaps="false" style="@style/btnSolidRounded_4" tools:text="@string/lbl_withdraw2"/>
        <View android:background="@color/gray_200"
            android:id="@+id/lineLineOne" android:layout_gravity="start"
            android:layout_height="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_81pxv" android:layout_width="@dimen/_390pxh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumn3512861removeb"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_33pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRow3512861removeb"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageImagesremovebg"
                    android:layout_height="@dimen/_41pxh"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="@dimen/_42pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_imagesremovebg"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_imagesremovebg"/>
                <ImageView android:id="@+id/image3512861removeb"
                    android:layout_height="@dimen/_48pxh"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_7pxv"
                    android:layout_width="@dimen/_44pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_3512861removeb"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_3512861removeb"/>
                <ImageView android:id="@+id/imagePngtreedealic"
                    android:layout_height="@dimen/_64pxh"
                    android:layout_marginStart="@dimen/_24pxh"
                    android:layout_width="@dimen/_61pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_pngtreedealic}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_pngtreedealic"/>
                <ImageView android:id="@+id/image8660953"
                    android:layout_height="@dimen/_41pxh"
                    android:layout_marginBottom="@dimen/_9pxv"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="@dimen/_41pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_8660951"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_8660951"/>
                <ImageView android:id="@+id/imageV937aew139re"
                    android:layout_height="@dimen/_61pxh"
                    android:layout_marginStart="@dimen/_22pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_58pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_v937aew139re}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_v937aew139re"/>
            </LinearLayout>
            <LinearLayout android:id="@+id/linearRowfeed"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFEED"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_weight="0.11"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtFEED}"
                    style="@style/txtIntermedium9" tools:text="@string/lbl_feed"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLanguageOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_31pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.33"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtLanguageOne}"
                    style="@style/txtIntermedium9" tools:text="@string/lbl_create_a_post"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtDEALS"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_23pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_weight="0.14"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtDEALS}"
                    style="@style/txtIntermedium9" tools:text="@string/lbl_deals"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtWITHDRAWOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_35pxh"
                    android:layout_weight="0.24"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtWITHDRAWOne}"
                    style="@style/txtIntermedium9" tools:text="@string/lbl_withdraw"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPROFILE"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_32pxh"
                    android:layout_weight="0.17"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{withdrawVM.withdrawModel.txtPROFILE}"
                    style="@style/txtIntermedium9" tools:text="@string/lbl_profile"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
