<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="startVM" type="com.janraysapplication.app.modules.start.data.viewmodel.StartVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumncollabmates"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtCollabMates"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_76pxh"
            android:layout_marginStart="@dimen/_76pxh"
            android:layout_marginTop="@dimen/_281pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{startVM.startModel.txtCollabMates}"
            style="@style/txt" tools:text="@string/lbl_collabmates"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnLogIn"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_38pxv"
            android:layout_marginEnd="@dimen/_76pxh"
            android:layout_marginStart="@dimen/_76pxh"
            android:layout_marginTop="@dimen/_60pxv"
            android:layout_width="@dimen/_173pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_log_in"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_log_in"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSignUp"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_38pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_76pxh"
            android:layout_marginStart="@dimen/_76pxh"
            android:layout_marginTop="@dimen/_39pxv"
            android:layout_width="@dimen/_173pxh"
            android:paddingBottom="@dimen/_8pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@string/lbl_sign_up"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline" tools:text="@string/lbl_sign_up"/>
    </LinearLayout>
</layout>
